# Blender-Launcher-V2-Test

./: .gitignore  Makefile  README.md  build_linux.sh  build_style.py  pyproject.toml  run.ps1  version.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: api_cache_update.yml  docs.yml  linux_release.yml  macos_release.yml  manual_macos_release.yml  manual_ubuntu_release.yml  manual_ubuntu_release_latest.yml  manual_windows_release.yml  release-winget.yml  release.yml  ubuntu_release.yml  windows_release.yml
.zed/: settings.json
docs/: zensical.toml
docs/docs/: FAQ.md  blender_forks.md  build_initialization.md  development.md  feature_request.md  file_association.md  github_token.md  implementing_new_fork.md  index.md  installation.md  library_folder.md  localization.md  manual_build_installation.md  settings.md  troubleshooting.md  user_interface.md
docs/mkdocs/: index.md  settings.md
extras/: Blender Launcher.ini  blenderlauncher.desktop
scripts/: build_linux.sh  build_linux_debug.sh  build_mac.sh  build_win.bat  build_win_debug.bat  bump_version.py  language_coverage.py  serve_docs.bat  serve_docs.sh  set_default_settings.py  update_cache_api.py
source/: main.py
source/items/: base_list_widget_item.py  enablable_list_widget_item.py
source/modules/: _copyfileobj.py  _platform.py  _resources_rc.py  argument_parsing.py  bl_api_manager.py  bl_instance_handler.py  blender_update_manager.py  blendfile_reader.py  build_info.py  cli_launching.py  connection_manager.py  file_utils.py  fonts.py  icons.py  platform_utils.py  scraper_cache.py  settings.py  shortcut.py  string_utils.py  task.py  tasks.py  uninstall.py  version_matcher.py  winget_integration.py
source/resources/: resources.qrc
source/threads/: downloader.py  extractor.py  folder_observer.py  library_drawer.py  observer.py  register.py  remover.py  renamer.py  scraper.py  template_installer.py
source/utils/: dpi.py  i18n_init.py  logger.py
source/widgets/: base_build_widget.py  base_line_edit.py  base_list_widget.py  base_menu_widget.py  base_page_widget.py  base_progress_bar_widget.py  base_tool_box_widget.py  build_state_widget.py  datetime_widget.py  download_widget.py  elided_text_label.py  folder_select.py  foreign_build_widget.py  header.py  left_icon_button_widget.py  library_damaged_widget.py  library_widget.py  lintable_line_edit.py  repo_group.py  repo_visibility_view.py  tab_widget.py  (+1 more)
tests/: config.py  conftest.py
(+91 files in other folders)
